<resources>
    <string name="app_name">KO手机助手</string>

    <string name="recommend">推荐</string>
    <string name="game">游戏</string>
    <string name="app">应用</string>
    <string name="account">我的</string>
    <string name="tool">工具</string>

    <string name="home_choice_recommend_text">为您推荐有优秀的必备应用</string>
    <string name="game_download_text">下载 : </string>
    <string name="game_size_text">大小 : </string>
    <string name="app_rank_text">软件榜单</string>
    <string name="game_rank_text">游戏榜单</string>
    <string name="app_prerequisites_text">软件</string>
    <string name="game_prerequisites_text">游戏</string>
    <string name="love_number">人喜欢</string>
    <string name="load_again">重新加载</string>
    <string name="detail_free">免费</string>
    <string name="detail_safe">安全</string>
    <string name="detail_no_ad">无广告</string>
    <string name="newGame">新游</string>
    <string name="artifact">神器</string>
    <string name="schoolgirl">女生</string>
    <string name="online">网游</string>
    <string name="load_no_more">到底了 !</string>
    <string name="load_failed">加载数据失败</string>
    <string name="description">应用描述</string>
    <string name="app_choice_title">优质首发抢先看</string>
    <string name="more">更多</string>
    <string name="app_choice_list_title">时尚生活潮流汇</string>
    <string name="startScan">开始扫描</string>
    <string name="close_background_process">关闭后台应用</string>
    <string name="clear_rubish">清理垃圾</string>

</resources>
