<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:paddingTop="3dp"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/recommend_choice_space_color">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:text="@string/app_choice_title"/>

        <LinearLayout
            android:id="@+id/moreLin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:clickable="true">
            <TextView
                android:id="@+id/moreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textColor="@color/list_rank_default_color"/>
            <ImageView
                android:id="@+id/moreImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/more"/>
        </LinearLayout>
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/contentLin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/recommend_choice_space_color">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical">
        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/holo_red_dark"/>
        <TextView
            android:id="@+id/appChoiceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/app_choice_list_title"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>