<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/topBlue"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/downloadLin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/download"/>
        <TextView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            android:text="下载"/>
    </RelativeLayout>

    <com.jiqu.helper.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.jiqu.helper.view.MyScrollView
        android:id="@+id/myScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/downloadLin"
        android:layout_below="@id/titleBar"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/topBlue"
                android:gravity="center">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    fresco:actualImageScaleType="fitXY"
                    fresco:fadeDuration="300"
                    fresco:failureImage="@mipmap/ic_launcher"
                    fresco:placeholderImage="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:text="德玛西亚"
                        android:textColor="@color/detail_name_color" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp">

                        <TextView
                            android:id="@+id/type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/detail_name_color" />

                        <TextView
                            android:id="@+id/size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/detail_name_color" />
                    </LinearLayout>

                    <com.jiqu.helper.view.RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        fresco:starNumber="5"
                        fresco:step="0.5" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <CheckBox
                            android:id="@+id/free"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/detail_checkbox_selector"
                            android:paddingLeft="2dp"
                            android:text="@string/detail_free" />

                        <CheckBox
                            android:id="@+id/safe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:button="@drawable/detail_checkbox_selector"
                            android:paddingLeft="2dp"
                            android:text="@string/detail_safe" />

                        <CheckBox
                            android:id="@+id/noAd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:button="@drawable/detail_checkbox_selector"
                            android:paddingLeft="2dp"
                            android:text="@string/detail_no_ad" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/buzhidaoshiganmayongde" />
            </LinearLayout>

            <com.jiqu.helper.view.FragmentAndViewPager
                android:id="@+id/fragmentAndViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                fresco:afterBackgroundColor="@color/white"
                fresco:afterColor="@color/topSelectedBlue"
                fresco:backgroundColor="@color/white"
                fresco:beforeColor="@color/black"
                fresco:hasTabStrip="true"
                fresco:tabStripColor="@color/topBlue" />

        </LinearLayout>
    </com.jiqu.helper.view.MyScrollView>
</RelativeLayout>